Added a pagination component to all pages

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,7 +7,7 @@ a:-webkit-any-link {
   cursor: pointer;
 }
 
-.navbar{
+.navbar-container{
   color: #EEEEEE;
   font-size: 1.2rem;
   background-color: #393E46;
