--- a/src/components/animedetail/AnimeDetail.css
+++ b/src/components/animedetail/AnimeDetail.css
@@ -31,6 +31,7 @@ main{
 
 .favourite{
   align-self: flex-start;
+  margin-left: 0.2rem;
 }
 
 .favourite-btn{
@@ -45,7 +46,7 @@ main{
 
 .favourite-icon.disabled{
   transition: all 0.3s ease-in-out;
-  color: red;
+  color: #800000;
 }
 
 .favourite-icon{
