Further styling imporvements to fit wesbite theme

--- a/src/components/animedetail/AnimeDetail.css
+++ b/src/components/animedetail/AnimeDetail.css
@@ -91,27 +91,27 @@ main{
 }
 
 .rank{
-  color: #00ADB5;
+  color: #fff;
 }
 
 .fire{
-  color: #00ADB5;
+  color: orangered;
 }
 
 .star{
-  color: #00ADB5;
+  color: yellow;
 }
 
 .calendar{
-  color: #00ADB5;
+  color: #fff;
 }
 
 .cloud{
-  color: #00ADB5
+  color: #fff;
 }
 
 .tick{
-  color: #00ADB5;
+  color: #fff;
 }
 
 .trailer{
