--- a/src/pages/Signup/Signup.css
+++ b/src/pages/Signup/Signup.css
@@ -8,7 +8,10 @@
 }
 
 .sign-up-form{
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
   background-color: #393E46;
   border-radius: 0.5rem;
   margin: 0.5rem;
@@ -21,9 +24,27 @@
 
 .sign-up-form input{
   width: 100%;
-  padding: 0.5rem;
+  padding: 0.3rem;
   border-radius: 0.5rem;
   border: none;
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #222831;
+  color: #fff;
+}
+
+.sign-up-form input:focus{
+  outline-color: #00ADB5;
+}
+
+.sign-up-form input::placeholder{
+  transition: all 0.3s ease-in-out;
+  color: #EEEEEE;
+}
+
+.sign-up-form input:focus::placeholder{
+  transition: all 0.3s ease-in-out;
+  color: transparent;
 }
 
 .sign-up-btn{
@@ -34,8 +55,6 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  margin-top: 0.8rem;
-  margin-bottom: 0.2rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
   font-size: 1.2rem;
@@ -48,6 +67,10 @@
 .sign-up-btn:hover{
   background-color: #00ADB5;
   transition: 0.2s all ease-in-out;
+}
+
+.alternative{
+  text-align: center;
 }
 
 .login-link{
