--- a/src/components/animelist/AnimeList.css
+++ b/src/components/animelist/AnimeList.css
@@ -1,4 +1,4 @@
-.anime-list{
+/* .anime-list{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -51,4 +51,4 @@
   text-align: center;
 }
 
-
+ */
