--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -1,4 +1,4 @@
-.dropbtn{
+/* .dropbtn{
   border: none;
   font-family: inherit;
   font-size: 1.1rem;
@@ -77,4 +77,4 @@
 
 .dropdown-content:hover{
   visibility: visible;
-}
+} */
