--- a/src/pages/FavouriteAnime.css
+++ b/src/pages/FavouriteAnime.css
@@ -1,4 +1,4 @@
-.fav-anime{
+/* .fav-anime{
   min-height: 88.5vh;
   position: relative;
 }
@@ -23,4 +23,4 @@
 .question:hover{
   color: #00ADB5;
   transition: all 0.3s ease-in-out;
-}
+} */
